tests/harness/errors/029_type_mismatch_num.eu
# Type mismatch: pass number where string expected
x: str.letters(42)
